--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,16 +2,6 @@
 <app-header></app-header>
 <main>
 
-<div class="list-container">
-  <app-todo-list></app-todo-list>
-</div>
-<div class="todo-container">
-<app-todo></app-todo>
-</div>
-<button mat-icon-button color="primary" class="add-new-todo" (click)="openDialog()">
-  <mat-icon><span class="material-icons">
-    add_circle
-    </span></mat-icon>
-</button>
+<app-todo-container></app-todo-container>
 </main>
 </div>
